# TCG

./: .env.dev  .env.example  .env.prod  .gitguardian.yaml  .gitignore  Bulk_Egress_Guide.html  CART_MANAGEMENT_IMPLEMENTATION.md  CHANGELOG_ADMIN_ORDERS.md  CLEANUP_NON_MTG.md  COMMIT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_V1.7.md  DIAGNOSTICO_CRITICO.md  DOC_IMPORT_AND_PRICING_LOGIC.md  FILTER_FIX_SUMMARY.md  GUIA_ADMINISTRACION.md  HANDOVER_PRICING.md  INICIO_RAPIDO.md  LEYES_DEL_SISTEMA.md  LOCAL_TROUBLESHOOTING.md  MEJORAS_NAVEGACION.md  PLAN.md  PLAN_ADMIN_ORDERS_INVENTORY.md  PLAN_AUTH_UPDATE.md  PLAN_AUTOCOMPLETE.md  PLAN_FIX_FILTERS.md  PLAN_ORDER_BY.md  POSTMORTEM_PERFORMANCE.md  PRD.md  PRD_CORRECCION_FILTROS.md  PRD_FILTROS_CORRECCION.md  PRD_HELP_SECTION.md  PRD_INVENTORY_ONLY_VERSIONS.md  PRD_INVENTORY_PRICING_VISIBILITY.md  PRD_MODAL_RESPONSIVE.md  PRD_PERFORMANCE.md  PRD_PROGRESS_BAR.md  PRD_RESPONSIVE_CARD_MODAL.md  PRD_SIMPLE_INVENTORY_IMPORT.md  (+120 more)
 .agent/: COMPOUND.md
.StrataFramework/: .gitignore  README.md  Strata Dev Framework The Compounding AI Playbook 2eaacc211ff180fa90d5d8d118437f9f.html  package.json
.agent/: AGENTS.md  COMPOUND.md  SESSION_STATE.md  lessons_learned.md  prod_credentials.txt  update_compound.py
.opencode/: mcp-github.ps1  mcp-supabase.ps1
Documentación/: 0_sync-all.txt  Admin_Guide_V1.txt  Estructura Detallada Cartas Lorcana TCG_.txt  Estructura Detallada Cartas MTG_.txt  Geekorium Omni-TCG PRD.md  Manual de Diseño_ Colores Geekorium_.txt  Mapeo TCG por Marketplace_.txt  Mejoras_Implementadas.md  OMNI_TCG_REQS.md  PROGRESS_OMNI.md  Requisitos iniciales.txt  registros_de_inventario_2026_05_26.xlsx
assets/: index-CNTs5tZC.css  index-epUTCHHi.js
backup_before_restructure/: README.md  pyproject.toml  requirements.txt
backup_before_restructure/data_loader/: load_mtgs_cards_from_scryfall.py  load_mtgs_sets_from_scryfall.py
backup_before_restructure/scripts/: deploy_edge_functions.sh  deploy_functions.sql  setup.py  sql_deployment_instructions.md  test_connection.py  test_functions.py
backup_before_restructure/tests/integration/: test_real_scraping.py  test_supabase_apis.py
backup_before_restructure/tests/unit/: test_marketplace_mapping.py
data/: inventory_backup_20260307_115211.json  scryfall_ecl_265.json  scryfall_ecl_347.json
data_loader/: load_lorcana_cards.py  load_mtgs_cards_from_scryfall.py  main.py
docs/: 20260211_checkout_and_stock_fix.md  CardKingdom_Integration.md  Estructura Detallada Cartas Flesh and Blood TCG_.txt  Estructura Detallada Cartas Wixoss TCG_.txt  Flujos_BPMN_Geeko.md  Geeko FIX 3(1).md  Geeko diseño fix.md  PRD - Correcciones Web Geekorium20260304.md  PRD nuevas modificaciones 20260223.md  PRD_Admin_Orders_Inventory.md  PRD_COMUNIDADES_Y_RANKINGS.md  PRD_MASTER.md  PRD_Mejoras_Visuales_y_Funcionales_Web.md  PRD_Missed_Loads_Recovery.md  SESSION_SUMMARY_2026_02_16.md  TRANSLATION_SUMMARY.md  flujo_checkout.mmd  flujo_checkout_corregido.md  flujo_cliente.mmd  flujo_inventario.mmd  importTestFile.txt  (+5 more)
(+855 files in other folders)
