[tool.poetry]
name = "tcg-web-app"
version = "0.1.0"
description = "Sistema completo de APIs para Trading Card Games"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
supabase = "^2.16.0"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
aiohttp = "^3.9.0"
pandas = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
